--- a/pages/about.html
+++ b/pages/about.html
@@ -31,6 +31,9 @@
                     <p>
                         Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango, is our conductor.  Performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
                     </p>
+                    <p>
+                        The orchestra rehearses from 7pm to 9pm on Thursday nights (during concert season) at E. O. Smith High School in Storrs, CT. If you have any questions or are interested in becoming a member, please contact us at <a href="mailto:willimantic.orch@gmail.com">willimantic.orch@gmail.com</a>.
+                    </p>
                 </div>
 
 
@@ -38,11 +41,6 @@
         </div>        
         
         
-
-        <div class = 'news'>
-
-
-        </div>
 
     </main>
 
