--- a/pages/index.html
+++ b/pages/index.html
@@ -18,18 +18,41 @@
             </div>
             <div class="column-txt">
                 <h2>Welcome!</h2>
-                <p class="main-text">
-                    The Willimantic Orchestra is a non-profit 501(c)(3) community orchestra with a long and storied past that traces its beginnings back to the 1920s.  In its current form, the orchestra grew out of chamber music groups at Eastern Connecticut State University.
-                </p>
+                <div class="main-text">
+                    <p class="main-text">
+                        The Willimantic Orchestra is a non-profit 501(c)(3) community orchestra with a long and storied past that traces its beginnings back to the 1920s.  In its current form, the orchestra grew out of chamber music groups at Eastern Connecticut State University.
+                    </p>
+                    <p>
+                        If you have any questions or are interested in becoming a member, please contact us at <a href="mailto:willimantic.orch@gmail.com">willimantic.orch@gmail.com</a>.
+                    </p>
+                </div>
+
+                <div class = 'news'>
+                    <h3>Don't miss our next concert!</h3>
+                    <ul>
+                        <li>
+                            <strong>Sunday, March 2nd at 3pm</strong>
+                            <p>
+                                Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
+                            </p> 
+                            <p>
+                                Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
+                            </p>
+                        </li>
+                        <li>
+                            <strong>Sunday, May 4th at 3pm</strong>
+                        </li>
+                        <p>
+                            Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
+                        </p>
+                    </ul>
+                </div>
 
             </div>
         </div>        
         
 
-        <div class = 'news'>
-            <h3>Don't miss our next concert!</h3>
 
-        </div>
 
     </main>
 
