edited all info

--- a/pages/about.html
+++ b/pages/about.html
@@ -28,19 +28,34 @@
                     <p>
                         Comprised of a mixture of seasoned musicians, college students and even younger talent, we come together to make music and fun for ourselves and the entire community.
                     </p>
-                    <p>
-                        Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango, is our conductor.  Performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
-                    </p>
-                    <p>
-                        The orchestra rehearses from 7pm to 9pm on Thursday nights (during concert season) at E. O. Smith High School in Storrs, CT. If you have any questions or are interested in becoming a member, please contact us at <a href="mailto:willimantic.orch@gmail.com">willimantic.orch@gmail.com</a>.
-                    </p>
+
+
                 </div>
 
 
             </div>
+
         </div>        
-        
-        
+        <div class="container">
+            <div class="column-img">
+                <img src="../images/scottchaurette_med_hr.jpeg" alt = 'Scott Chaurette portrait'>
+            </div>
+            <div class="column-txt">
+                <p class="main-text">
+                    Our music director and conductor Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango, is our conductor.  Performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
+                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="column-img">
+                <img src="../images/fun.jpg">
+            </div>
+            <div class="column-txt main-text">
+                <p>
+                    The orchestra rehearses from 7pm to 9pm on Thursday nights (during concert season) at E. O. Smith High School in Storrs, CT. If you have any questions or are interested in becoming a member, please contact us at <a href="mailto:willimantic.orch@gmail.com">willimantic.orch@gmail.com</a>.
+                </p>
+            </div>
+        </div>
 
     </main>
 
