--- a/pages/index.html
+++ b/pages/index.html
@@ -31,18 +31,18 @@
                     <h3>Don't miss our next concert!</h3>
                     <ul>
                         <li>
-                            <strong>Sunday, March 2nd at 3pm</strong>
-                            <p>
+                            <strong>Sunday, March 2nd at 4pm</strong>
+                            <p class="main-text">
                                 Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
                             </p> 
-                            <p>
+                            <p class="main-text">
                                 Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
                             </p>
                         </li>
                         <li>
                             <strong>Sunday, May 4th at 3pm</strong>
                         </li>
-                        <p>
+                        <p class="main-text">
                             Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
                         </p>
                     </ul>
