--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Willimantic Orchestra</title>
-    <link rel="stylesheet" href="../main.css">
-    <script defer src="../functions.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script defer src="functions.js"></script>
 </head>
 <body>
     
