correct for format

--- a/index.html
+++ b/index.html
@@ -26,31 +26,30 @@
                         If you have any questions or are interested in becoming a member, please contact us at <a href="mailto:willimantic.orch@gmail.com">willimantic.orch@gmail.com</a>.
                     </p>
                 </div>
-
-                <div class = 'news'>
-                    <h3>Don't miss our next concert!</h3>
-                    <ul>
-                        <li>
-                            <strong>Sunday, March 2nd at 4pm</strong>
-                            <p class="main-text">
-                                Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
-                            </p> 
-                            <p class="main-text">
-                                Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
-                            </p>
-                        </li>
-                        <li>
-                            <strong>Sunday, May 4th at 3pm</strong>
-                        </li>
-                        <p class="main-text">
-                            Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
-                        </p>
-                    </ul>
-                </div>
-
             </div>
+
+
         </div>        
-        
+        <div class = 'news container'>
+            <h3>Don't miss our next concert!</h3>
+            <ul>
+                <li>
+                    <strong>Sunday, March 2nd at 4pm</strong>
+                    <p class="main-text">
+                        Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
+                    </p> 
+                    <p class="main-text">
+                        Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
+                    </p>
+                </li>
+                <li>
+                    <strong>Sunday, May 4th at 3pm</strong>
+                </li>
+                <p class="main-text">
+                    Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
+                </p>
+            </ul>
+        </div>
 
 
 
