--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
             </div>
             <div class="column-txt">
                 <p class="main-text">
-                    Our music director and conductor Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango, is our conductor.  Performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
+                    Our music director and conductor is Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango.  Our performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
                 </p>
             </div>
         </div>
