--- a/pages/concerts.html
+++ b/pages/concerts.html
@@ -12,11 +12,12 @@
     <div id="title"></div>
     <div id="navbar"></div>
     <main>
-
-
+        <h2>Our concerts</h2>
+        <p class="main-text">Most Performances are held at the Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic. Suggested donation for adults is $15, students $5, and free for anyone under 12, but no one will be turned away!</p>
         <div class = 'news'>
-            <h3>Upcoming concerts</h3>
-
+            
+            
+            <h3>Upcoming</h3>
                     <strong>Sunday, March 2nd at 4pm</strong>
                     <p class="main-text">
                         Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
@@ -29,7 +30,14 @@
                 </li>
                 <p class="main-text">
                     Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
-                </p>        </div>
+                </p>
+                <p class="main-text">
+                    Featuring the Windham Regional Arts Council (WRAC) Winner of the young artist competition                    
+                </p>        
+                <p class="main-text">
+                    Program includes Dvořák No. 9
+                </p>
+            </div>
 
     </main>
 
