--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
         </div>        
         <div class = 'news container'>
-            <h3>Don't miss our next concert!</h3>
+            <h3>Don't miss our next concerts!</h3>
             <ul>
                 <li>
                     <strong>Sunday, March 2nd at 4pm</strong>
-                    <p class="main-text">
-                        Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
-                    </p> 
-                    <p class="main-text">
-                        Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
-                    </p>
                 </li>
+                <p class="main-text">
+                    Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
+                </p> 
+                <p class="main-text">
+                    Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
+                </p>
                 <li>
                     <strong>Sunday, May 4th at 3pm</strong>
                 </li>
