add nav but didnt work...

--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,7 @@
 <body>
     
     <div id="title"></div>
+    <div id ='break'></div>
     <div id="navbar"></div>
     <main>
         <div class="container">
@@ -17,13 +18,13 @@
                 <img src="../images/WO_log.png" alt="Willimantic Orchestra Logo">
             </div>
             <div class="column-txt">
-                <h2>Welcome!</h2>
+                <h2>Our orchestra</h2>
                 <div class="main-text">
                     <p>
-                        The Willimantic Orchestra is a non-profit 501(c)(3) community orchestra with a long and storied past that traces its beginnings back to the 1920s.  In its current form, the orchestra grew out of chamber music groups at Eastern Connecticut State University.
+                        The Willimantic Orchestra is a non-profit 501(c)(3) community orchestra with a long and storied past that traces its beginnings back to the 1920s.  In its current form, the orchestra grew out of chamber music groups at Eastern Connecticut State University (ECSU).
                     </p>
                     <p>
-                        The orchestra still performs at ECSU as well as in other Willimantic and surrounding area sites.   
+                        The orchestra now performs at ECSU as well as in other Willimantic and surrounding area sites.   
                     </p>
                     <p>
                         Comprised of a mixture of seasoned musicians, college students and even younger talent, we come together to make music and fun for ourselves and the entire community.
@@ -42,7 +43,7 @@
             </div>
             <div class="column-txt">
                 <p class="main-text">
-                    Our music director and conductor is Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango.  Our performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
+                    Our music director and conductor is Scott Chaurette, a classically trained string player and conductor, who is also experienced in the genres of jazz, rock, R&B and tango. Our performances feature traditional classical repertoire but also branch out into pops concerts and contemporary music.  
                 </p>
             </div>
         </div>
