--- a/pages/donate.html
+++ b/pages/donate.html
@@ -10,6 +10,7 @@
 <body>
     
     <div id="title"></div>
+    <div id ='break'></div>
     <div id="navbar"></div>
     <main>
         <div class="container">
@@ -18,7 +19,7 @@
             </div>
             <div class="column-txt">
                 <h2>We need your support!</h2>
-                <p>
+                <p class="main-text">
                     As a non-profit community organization, the Willimantic Orchestra relies on the financial support of business and individuals in our area. By placing ads in our concert programs, you can help to sustain this valuable local cultural asset, and help us continue to bring free concerts to our community. If you or your business would like to help support the Orchestra, please reach out to <a href="mailto:willimantic.orch@gmail.com?subject=W.O.%20website%20inquiry">willimantic.orch@gmail.com</a>
        
                 </p>
@@ -32,7 +33,7 @@
             <div class="column-img">
 
             </div>
-            <div class="column-txt">
+            <div class="column-txt main-text">
                 You may also donate directly to the orchestra using the secure PayPal website:
                 <input type="image" src="../images/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                 <img alt="" border="0" src="../images/pixel.gif" width="1" height="1">
