--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <div id="title"></div>
+    <div id ='break'></div>
     <div id="navbar"></div>
     <main>
         <div class="container">
@@ -34,20 +35,14 @@
             <h3>Don't miss our next concerts!</h3>
             <ul>
                 <li>
-                    <strong>Sunday, March 2nd at 4pm</strong>
-                </li>
-                <p class="main-text">
-                    Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
-                </p> 
-                <p class="main-text">
-                    Program: Symphony No.45 "Farewell" by Haydn; The Bamboula by Coleridge-Taylor; Capriccio Espagnol by Rimsky-Korsakov
-                </p>
-                <li>
                     <strong>Sunday, May 4th at 3pm</strong>
                 </li>
                 <p class="main-text">
                     Location:  Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic
                 </p>
+                <p class="main-text"> Featuring winner of the <a href="https://www.windhamrac.org/young-artist-music-competition"target="_blank">Windham Regional Arts Council
+                    38th Annual Young Artist Music Competition</a></p>
+                <p> Program includes the beautiful Dvořák No. 9 (From the New World) </p>
             </ul>
         </div>
 
