--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </p>
                 <p class="main-text"> Featuring winner of the <a href="https://www.windhamrac.org/young-artist-music-competition"target="_blank">Windham Regional Arts Council
                     38th Annual Young Artist Music Competition</a></p>
-                <p> Program includes the beautiful Dvořák No. 9 (From the New World) </p>
+                <p class="main-text"> Program includes the beautiful Dvořák No. 9 (From the New World) </p>
             </ul>
         </div>
 
