update concert time

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
             <div class="column-img">
                 <img src="../images/WO_log.png" alt="Willimantic Orchestra Logo">
             </div>
-            <div class="column-txt">
+            <div class="">
                 <h2>Our orchestra</h2>
                 <div class="main-text">
                     <p>
