--- a/pages/about.html
+++ b/pages/about.html
@@ -13,10 +13,7 @@
     <div id ='break'></div>
     <div id="navbar"></div>
     <main>
-        <div class="container">
-            <div class="column-img">
-                <img src="../images/WO_log.png" alt="Willimantic Orchestra Logo">
-            </div>
+        <div class="">
             <div class="">
                 <h2>Our orchestra</h2>
                 <div class="main-text">
