--- a/pages/concerts.html
+++ b/pages/concerts.html
@@ -17,7 +17,7 @@
         <p class="main-text">Most Performances are held at the Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic. Suggested donation for adults is $15, students $5, and free for anyone under 12, but no one will be turned away!</p>
         <div class = 'news'>            
             
-            <h3>Upcoming</h3>
+            <h3>Past</h3>
                 <div class="past">
                     <strong>Sunday, March 2nd at 4pm</strong>
                     <p class="main-text">
