update 2025 winter concert

--- a/pages/concerts.html
+++ b/pages/concerts.html
@@ -21,7 +21,7 @@
                     <strong><p class="news">Saturday, December 13, 2025, at 3:00 PM</p>
                     </strong>
                     <p class="main-text">Location: TBD</p>
-                    <p class="main-text">Program: Tchaikovsky - Orchestral Suite No. 2, Op. 53; Glazunov - Violin Concerto in A minor featuring violinist Anatole Keshwani; 
+                    <p class="main-text">Program includes Tchaikovsky Orchestral Suite No. 2, Op. 53; Glazunov Violin Concerto in A minor featuring violinist Anatole Keshwani
                     </p>
                 </div>
             <h3>Past</h3>
