--- a/pages/donate.html
+++ b/pages/donate.html
@@ -35,8 +35,10 @@
             </div>
             <div class="column-txt main-text">
                 You may also donate directly to the orchestra using the secure PayPal website:
-                <input type="image" src="../images/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="../images/pixel.gif" width="1" height="1">
+                  <a href="https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=4CUPGYUGUGDUE&ssrt=1762484937456" 
+  target="_blank">
+                  <img src="../images/btn_donateCC_LG.gif" alt="Donate with PayPal">
+              </a>
             </div>
 
         </div>
