--- a/pages/concerts.html
+++ b/pages/concerts.html
@@ -20,7 +20,7 @@
                 <div class="news"> 
                     <strong><p class="news">Saturday, December 13, 2025, at 3:00 PM</p>
                     </strong>
-                    <p class="main-text">Location: TBD</p>
+                    <p class="main-text">Location:  <a href="https://vdm.uconn.edu/">von der Mehden Recital Hall, UConn</a></p>
                     <p class="main-text">Program includes Tchaikovsky Orchestral Suite No. 2, Op. 53; Glazunov Violin Concerto in A minor featuring violinist Anatole Keshwani
                     </p>
                 </div>
