--- a/pages/donate.html
+++ b/pages/donate.html
@@ -35,10 +35,13 @@
             </div>
             <div class="column-txt main-text">
                 You may also donate directly to the orchestra using the secure PayPal website:
+
+                <p style="text-align: center;">
                   <a href="https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=4CUPGYUGUGDUE&ssrt=1762484937456" 
   target="_blank">
                   <img src="../images/btn_donateCC_LG.gif" alt="Donate with PayPal">
               </a>
+              </p>
             </div>
 
         </div>
