remove upcoming concert

--- a/pages/concerts.html
+++ b/pages/concerts.html
@@ -16,15 +16,14 @@
         <h2>Our concerts</h2>
         <p class="main-text">Most Performances are held at the Fine Arts Instructional Center (FAIC) building on campus at Eastern CT State University in Willimantic. Suggested donation for adults is $15, students $5, and free for anyone under 12, but no one will be turned away!</p>
         <div class = 'news'>            
-            <h3>Upcoming</h3>
-                <div class="news"> 
+            <h3>Past</h3>
+                <div class="past"> 
                     <strong><p class="news">Saturday, December 13, 2025, at 3:00 PM</p>
                     </strong>
                     <p class="main-text">Location:  <a href="https://vdm.uconn.edu/">von der Mehden Recital Hall, UConn</a></p>
                     <p class="main-text">Program includes Tchaikovsky Orchestral Suite No. 2, Op. 53; Glazunov Violin Concerto in A minor featuring violinist Anatole Keshwani
                     </p>
                 </div>
-            <h3>Past</h3>
                 <div class="past">
                     <strong>Sunday, March 2nd at 4pm</strong>
                     <p class="main-text">
